--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,4 +1,6 @@
+
 .formcontainer{
+    padding-top:75px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,3 +16,11 @@
     border-radius: 10px;
     padding: 25px;
 }
+
+html {
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    height: auto;
+    min-height: 100vh;
+  }
