--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,25 +1,24 @@
 <!-- <app-header></app-header> -->
 
 <ng-container *ngIf="product$ | async as products">
-    <h2 style = "padding-left: 10px;">Welcome to the Employee Dashboard</h2>
-<p-carousel [value]="products" styleClass="custom-carousel" [numVisible]="4" [numScroll]="1" [circular]="true" [autoplayInterval]="3000" [responsiveOptions]="responsiveOptions">
-    <ng-template let-product pTemplate="item">
-        <div class="product-item" style="padding-top: 100px;">
-            <div class="product-item-content">
-                <div class="p-mb-3">
-                </div>
-                <div>
-                    <h4 class="p-mb-1">{{product.name}}</h4>
-                    <h6 class="p-mt-0 p-mb-3">${{product.price}}</h6>
-                    <span [class]="'product-badge status-'+product.inventoryStatus.toLowerCase()">{{product.inventoryStatus}}</span>
-                    <div class="car-buttons p-mt-5">
-                        <p-button type="button" styleClass="p-button p-button-rounded p-mr-2" icon="pi pi-search"></p-button>
-                        <p-button type="button" styleClass="p-button-success p-button-rounded p-mr-2" icon="pi pi-star"></p-button>
-                        <p-button type="button" styleClass="p-button-help p-button-rounded" icon="pi pi-cog"></p-button>
+    <h2 style="padding-left: 10px;">Welcome to the Employee Dashboard</h2>
+    <p-carousel [value]="products" [numVisible]="2" [numScroll]="2" [circular]="false"
+        [autoplayInterval]="3000" [responsiveOptions]="responsiveOptions">
+        <ng-template let-product pTemplate="item">
+            <div class="product-item">
+                <div class="product-item-content">
+                    <div>
+                        <img src="../{{product.image}}" [alt]="product.name" class="product-image" />
+                    </div>
+                    <div>
+                        <h4 class="p-mb-1">{{product.title}}</h4>
+
+                        <a href="{{product.url}}" style="text-decoration:none">
+                            <p-button type="button">Read More ></p-button>
+                        </a>
                     </div>
                 </div>
             </div>
-        </div>
-    </ng-template>
-</p-carousel>
+        </ng-template>
+    </p-carousel>
 </ng-container>
