--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -1,21 +1,21 @@
 <!-- <app-header></app-header> -->
 <p-toast></p-toast>
 <div class="card">
-    <h2 style = "padding-left: 10px;">Employee Records</h2>
-    <p-table #dt [value]="employee" 
-     [rows]="5" [paginator]="true"  dataKey="id"
+    <h2 style="padding-left: 10px;">Employee Records</h2>
+    <p-table #dt [value]="employee" [rows]="5" [paginator]="true" dataKey="id"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true"
-        [scrollable]="true" scrollHeight="300px"
-        [globalFilterFields]="['empId','firstName','lastName']">
+        [scrollable]="true" scrollHeight="300px" [globalFilterFields]="['empId','firstName','lastName']">
         <ng-template pTemplate="caption">
             <div class="p-d-flex">
                 <label>Full text Search: </label>
                 <span class="p-input-icon-left p-ml-auto">
                     <i class="pi pi-search"></i>
-                    <input pInputText type="text" (input)="applyFilterGlobal($event, 'contains')" placeholder="Search keyword" />
+                    <input pInputText type="text" (input)="applyFilterGlobal($event, 'contains')"
+                        placeholder="Search keyword" />
                 </span>
                 <span class="p-input-icon-right p-ml-auto" style="float: right;">
-                    <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()">
+                    <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success p-mr-2"
+                        (click)="openNew()">
                     </button>
                 </span>
             </div>
@@ -40,50 +40,54 @@
                 <td>{{employee.mobileNumber}}</td>
                 <td>{{employee.xEmp | yesno}}</td>
                 <td>
-                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2" (click)="editEmployee(employee)"></button>
-                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteEmployee(employee.empId)"></button>
+                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2"
+                        (click)="editEmployee(employee)"></button>
+                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
+                        (click)="deleteEmployee(employee.empId)"></button>
                 </td>
             </tr>
         </ng-template>
-      
+
     </p-table>
 </div>
 
 <!-- Dialog box html -->
 
-<p-dialog [(visible)]="showDialog" [style]="{width: '450px'}" header=" Add/Edit Employee" [modal]="true" styleClass="p-fluid">
-    <ng-template pTemplate="content" [formGroup]="empForm" >
+<p-dialog [(visible)]="showDialog" [style]="{width: '450px'}" header=" Add/Edit Employee" [modal]="true"
+    styleClass="p-fluid">
+    <ng-template pTemplate="content" [formGroup]="empForm">
         <!-- <img [src]="'assets/showcase/images/demo/product/' + product.image" [alt]="product.image" class="product-image" *ngIf="product.image"> -->
-       
+
         <div class="p-field">
             <h5 for="id">Employee ID*</h5>
-            <input pInputText type="text" formControlName="empId"/>
+            <input pInputText type="text" formControlName="empId" />
             <small class="p-error" *ngIf="submitted && empFormControl['empId'].errors">
                 <div *ngIf="empFormControl['empId'].errors['required']">ID is required</div>
                 <div *ngIf="empFormControl['empId'].errors['minlength']">
                     ID must be at least 7 numbers
-                  </div>
-                  <div *ngIf="empFormControl['empId'].errors['maxlength']">
+                </div>
+                <div *ngIf="empFormControl['empId'].errors['maxlength']">
                     Id must not exceed 10 numbers
-                  </div>    
+                </div>
             </small>
         </div>
 
-            <div class="p-field">
-                <h5 for="firstName">First Name*</h5>
-                <input type="text" pInputText formControlName = "firstName" required autofocus />
-                <small class="p-error" *ngIf="submitted && empFormControl['firstName'].errors">First name is required.</small>
-              </div>
-            <div class="p-field">
-                <h5 for="lastName">Last Name*</h5>
-                <input type="text" pInputText formControlName = "lastName" required autofocus />
-                <small class="p-error" *ngIf="submitted && empFormControl['lastName'].errors">Last name is required.</small>
-             </div>
-    
+        <div class="p-field">
+            <h5 for="firstName">First Name*</h5>
+            <input type="text" pInputText formControlName="firstName" required autofocus />
+            <small class="p-error" *ngIf="submitted && empFormControl['firstName'].errors">First name is
+                required.</small>
+        </div>
+        <div class="p-field">
+            <h5 for="lastName">Last Name*</h5>
+            <input type="text" pInputText formControlName="lastName" required autofocus />
+            <small class="p-error" *ngIf="submitted && empFormControl['lastName'].errors">Last name is required.</small>
+        </div>
+
 
         <div class="p-field">
             <h5 for="emailId">Email Id</h5>
-            <input pInputText type="text" formControlName="emailId"/>
+            <input pInputText type="text" formControlName="emailId" />
             <small class="p-error" *ngIf="submitted && empFormControl['emailId'].errors">
                 Please enter a valid email Id.</small>
         </div>
@@ -92,14 +96,15 @@
             <h5 for="mobileNumber">Mobile Number</h5>
             <input pInputText type="text" formControlName="mobileNumber" />
             <small class="p-error" *ngIf="submitted && empFormControl['mobileNumber'].errors">
-                    Please enter a valid mobile number.  
+                Please enter a valid mobile number.
             </small>
         </div>
 
         <div class="p-field">
             <h5 for="xEmp">X-Employee*</h5>
-            <input pInputText type="text" formControlName="xEmp"/>
-            <small class="p-error" *ngIf="submitted && empFormControl['xEmp'].errors">Please enter either True or False.</small>
+            <input pInputText type="text" formControlName="xEmp" />
+            <small class="p-error" *ngIf="submitted && empFormControl['xEmp'].errors">Please enter either True or
+                False.</small>
         </div>
     </ng-template>
 
@@ -110,5 +115,3 @@
 </p-dialog>
 
 <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
-
-
